integrate from RubyMine10: tips

--- a/platform-resources_eng/src/tips/TagNameCompletion.html
+++ b/platform-resources_eng/src/tips/TagNameCompletion.html
@@ -3,7 +3,7 @@
 <table cellpadding="15" width="98%" border="0">
   <tr>
     <td>A special variant of the CodeCompletion feature invoked by &shortcut:ClassNameCompletion; allows you to complete
-      tag names from namespaces not declared in the current file.
+      XML tag names from namespaces not declared in the current file.
       If the namespace is not declared yet the declaration is generated automatically.
       <p><img hspace="20" src="images/tagNameCompletion.png"></p>
     </td>
