--- a/platform-resources_eng/src/tips/CtrlShiftIForLookup.html
+++ b/platform-resources_eng/src/tips/CtrlShiftIForLookup.html
@@ -5,7 +5,7 @@
     <td>The <font style="font-family: Verdana; font-weight:bold;" size="3" color="#005555">Quick Definition Viewer</font>
       (&shortcut:QuickImplementations;) can be also used for items in lookup lists that appear on Code
       Completion and class/file/symbol navigaton commands.
-      <p><img hspace="20" src="../../../resources_eng/src/tips/images/ctrl_shift_i_lookup.gif"></p>
+      <p><img hspace="20" src="images/ctrl_shift_i_lookup.gif"></p>
     </td>
   </tr>
 </table>
