severities provider (initial)

--- a/plugins/spellchecker/core/testData/inspection/commentsWithMistakes/test.html
+++ b/plugins/spellchecker/core/testData/inspection/commentsWithMistakes/test.html
@@ -1,5 +1,5 @@
 <html>
 <body>
- <h1><!--Some content goes <weak_warning descr="Word 'hrere' is misspelled">hrere</weak_warning>--></h1>
+ <h1><!--Some content goes <MISSPELLED descr="Word 'hrere' is misspelled">hrere</MISSPELLED>--></h1>
 </body>
 </html>
