--- a/plugins/IntentionPowerPak/src/intentionDescriptions/FlipSetterCallIntention/description.html
+++ b/plugins/IntentionPowerPak/src/intentionDescriptions/FlipSetterCallIntention/description.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-<font face="verdana" size="-1">This intention flips setter call.</font>
+<font face="verdana" size="-1">This intention flips setter calls.</font>
 </body>
 </html>
