--- a/plugins/InspectionGadgets/src/inspectionDescriptions/ImplicitNumericConversion.html
+++ b/plugins/InspectionGadgets/src/inspectionDescriptions/ImplicitNumericConversion.html
@@ -10,6 +10,8 @@ can not result in loss of data (e.g.
 <b><font color="#000080">int</font></b>-><b><font color="#000080">long</font></b>).
 <br>Use the second checkbox to indicate that this inspection should ignore all conversions from
 and to <b><font color="#000080">char</font></b>.
+<br>Use the third checkbox to let this inspection ignore all conversions from literals and
+compile time constants.
 </p>
 </font></td> </tr> <tr> <td height="20"> <font face="verdana" size="-2">Powered by InspectionGadgets </font> </td> </tr> </table> </body>
 </html>
