Forgotten change of testMethod for corrected decorators rendering.

--- a/python/testData/quickdoc/Method.html
+++ b/python/testData/quickdoc/Method.html
@@ -1,1 +1,1 @@
-<html><body><code><small>class Foo</small><br>@<i>deco</i>()<br>def <b>meth</b>(self)</code><br><br>Doc&nbsp;of&nbsp;meth.</body></html>
+<html><body><code><small>class Foo</small><br>@<i>deco</i><br>def <b>meth</b>(self)</code><br><br>Doc&nbsp;of&nbsp;meth.</body></html>
