--- a/plugins/InspectionGadgets/src/inspectionDescriptions/ClassNewInstance.html
+++ b/plugins/InspectionGadgets/src/inspectionDescriptions/ClassNewInstance.html
@@ -3,7 +3,7 @@
 <font face="verdana" size="-1">This inspection reports any calls to
 <b><font color="#000080">java.lang.Class.newInstance()</font></b>.
 The <b><font color="#000080">newInstance</font></b> method propagates any
-exception thrown by the nullary constructor, including checked exceptions. Use
+exception thrown by the no-arg constructor, including checked exceptions. Use
 of this method effectively bypasses the compile-time exception checking that
 would otherwise be performed by the compiler. Replacing such a method call with
 a call to the <b><font color="#000080">java.lang.reflect.Constructor.newInstance()</font></b>
