--- a/platform-resources_eng/src/tips/FileStructurePopup.html
+++ b/platform-resources_eng/src/tips/FileStructurePopup.html
@@ -3,9 +3,9 @@
 <table cellpadding="15" width="98%" border="0">
   <tr>
     <td>You can quickly navigate in the currently edited file with &shortcut:FileStructurePopup;
-      (<font  style="font-family: Verdana; font-weight:bold;" size="3" color="#005555">View | File Structure Popup</font>).<br><br>
+      (<span  style="font-family: Verdana; font-weight:bold; color:#005555">View | File Structure Popup</span>).<br><br>
       It shows the list of members of the current class. Select an element you want to navigate to and press the
-      <font  style="font-family: Verdana; font-weight:bold;" size="3" color="#993300">Enter</font> key or the &shortcut:EditSource; key.
+      <span  style="font-family: Verdana; font-weight:bold; color:#993300">Enter</span> key or the &shortcut:EditSource; key.
       To easily locate an item in the list, just start typing its name.
     </td>
   </tr>
