SIMPLE_CLASS_NAME variable in Java templates (IDEADEV-39104)

--- a/resources_eng/src/fileTemplates/code/Implemented Method Body.java.html
+++ b/resources_eng/src/fileTemplates/code/Implemented Method Body.java.html
@@ -35,6 +35,11 @@ calling the <b>Code | Implement Method...</b> function (<b><i>Ctrl+I</i></b>).<b
     <td width="10">&nbsp;</td>
     <td valign="top"><font face="verdana" size="-1">qualified name of the class where method is implemented</font></td>
   </tr>
+  <tr>
+    <td valign="top"><nobr><font face="verdana" size="-2" color="#7F0000"><b><i>${SIMPLE_CLASS_NAME}</i></b></font></nobr></td>
+    <td width="10">&nbsp;</td>
+    <td valign="top"><font face="verdana" size="-1">non-qualified name of the class where method is implemented</font></td>
+  </tr>
 </table>
 </body>
 </html>
