--- a/platform-resources_eng/src/tips/Switcher.html
+++ b/platform-resources_eng/src/tips/Switcher.html
@@ -2,8 +2,9 @@
 <body style="font-family: Verdana; font-size: 13;" LEFTMARGIN="25" TOPMARGIN="25">
 <table cellpadding="15" width="98%" border="0">
   <tr>
-    <td><img src="images/switcher.png" alt="Switcher" align="left"/> Use Switcher (&shortcut:ToolWindowSwitcher;) to switch between open files and tool windows. Keeping <font style="font-family: Verdana; font-weight:bold;" size="3" color="#993300">Ctrl</font> pressed, use <font style="font-family: Verdana; font-weight:bold;" size="3" color="#993300">Up</font> and <font style="font-family: Verdana; font-weight:bold;" size="3" color="#993300">Down</font> arrow keys, <font style="font-family: Verdana; font-weight:bold;" size="3" color="#993300">Tab</font> or <font style="font-family: Verdana; font-weight:bold;" size="3" color="#993300">Shift+Tab</font>, <font style="font-family: Verdana; font-weight:bold;" size="3" color="#993300">Alt</font> for navigation;
-   use <font style="font-family: Verdana; font-weight:bold;" size="3" color="#993300">Delete</font> or <font style="font-family: Verdana; font-weight:bold;" size="3" color="#993300">BackSpace</font> to close editor tab or hide a tool window.</tr>
+    <td>Use Switcher (&shortcut:ToolWindowSwitcher;) to switch between open files and tool windows. Keeping <font style="font-family: Verdana; font-weight:bold;" size="3" color="#993300">Ctrl</font> pressed, use <font style="font-family: Verdana; font-weight:bold;" size="3" color="#993300">Up</font> and <font style="font-family: Verdana; font-weight:bold;" size="3" color="#993300">Down</font> arrow keys, <font style="font-family: Verdana; font-weight:bold;" size="3" color="#993300">Tab</font> or <font style="font-family: Verdana; font-weight:bold;" size="3" color="#993300">Shift+Tab</font>, <font style="font-family: Verdana; font-weight:bold;" size="3" color="#993300">Alt</font> for navigation;
+   use <font style="font-family: Verdana; font-weight:bold;" size="3" color="#993300">Delete</font> or <font style="font-family: Verdana; font-weight:bold;" size="3" color="#993300">BackSpace</font> to close editor tab or hide a tool window.</td></tr>
+<tr><td><img src="images/switcher.png" alt="Switcher" align="left"/></td></tr>
 </table>
 </body>
 </html>
