--- a/plugins/IntentionPowerPak/src/intentionDescriptions/ReplaceOperatorAssignmentWithAssignmentIntention/description.html
+++ b/plugins/IntentionPowerPak/src/intentionDescriptions/ReplaceOperatorAssignmentWithAssignmentIntention/description.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <font face="verdana" size="-1">This intention replaces an operator assignment
-statement with an equivalent plain assignment expression.
+expression with an equivalent plain assignment expression.
 </font>
 </body>
 </html>
