--- a/plugins/IntentionPowerPak/src/intentionDescriptions/ReplaceOperatorAssignmentWithPostfixIncrementIntention/description.html
+++ b/plugins/IntentionPowerPak/src/intentionDescriptions/ReplaceOperatorAssignmentWithPostfixIncrementIntention/description.html
@@ -2,7 +2,7 @@
 <body>
 <font face="verdana" size="-1">This intention replaces an operator assignment
 expression which increments or decrements an <b>int</b> or <b>long</b> with an
-equivalent postfix increment expression.
+equivalent postfix increment or decrement expression.
 </font>
 </body>
 </html>
