--- a/plugins/IntentionPowerPak/src/intentionDescriptions/AdapterToListenerIntention/description.html
+++ b/plugins/IntentionPowerPak/src/intentionDescriptions/AdapterToListenerIntention/description.html
@@ -3,5 +3,7 @@
 <font face="verdana" size="-1">This intention replaces an extension of an
 adapter class with a direct implementation of the listeners.
 </font>
+<br><br>
+<font face="verdana" size="-2">New in 9</font>
 </body>
 </html>
