--- a/plugins/IntentionPowerPak/src/intentionDescriptions/ReplaceAssignmentWithPostfixExpressionIntention/description.html
+++ b/plugins/IntentionPowerPak/src/intentionDescriptions/ReplaceAssignmentWithPostfixExpressionIntention/description.html
@@ -3,5 +3,7 @@
 <font face="verdana" size="-1">This intention replaces an assignment expression
 with an equivalent post fix increment or decrement expression.
 </font>
+<br><br>
+<font face="verdana" size="-2">New in 9</font>
 </body>
 </html>
