--- a/plugins/IntentionPowerPak/src/intentionDescriptions/ReplaceOperatorAssignmentWithPostfixExpressionIntention/description.html
+++ b/plugins/IntentionPowerPak/src/intentionDescriptions/ReplaceOperatorAssignmentWithPostfixExpressionIntention/description.html
@@ -4,5 +4,7 @@
 expression which increments or decrements an <b>int</b> or <b>long</b> with an
 equivalent postfix increment or decrement expression.
 </font>
+<br><br>
+<font face="verdana" size="-2">New in 9</font>
 </body>
 </html>
