--- a/plugins/IntentionPowerPak/src/intentionDescriptions/ReverseForLoopDirectionIntention/description.html
+++ b/plugins/IntentionPowerPak/src/intentionDescriptions/ReverseForLoopDirectionIntention/description.html
@@ -1,6 +1,7 @@
 <html>
 <body>
-<font face="verdana" size="-1">This intention reverses the order of traversal of a <b>for</b> loop.
-</font>
+<font face="verdana" size="-1">This intention reverses the order of traversal of a <b>for</b> loop.</font>
+<br><br>
+<font face="verdana" size="-2">New in 9</font>
 </body>
 </html>
