--- a/plugins/devkit/resources/inspectionDescriptions/ComponentRegistrationProblems.html
+++ b/plugins/devkit/resources/inspectionDescriptions/ComponentRegistrationProblems.html
@@ -8,7 +8,7 @@ This inspection finds various problems about incorrect registration of plugin co
     <ul>
         <li>Unresolved component/action implementation-classes (plugin.xml)</li>
         <li>Unresolved component interface-classes (plugin.xml)</li>
-        <li>Component implemenation-class is not assignable to its interface-class (plugin.xml)</li>
+        <li>Component implementation-class is not assignable to its interface-class (plugin.xml)</li>
         <li>Incorrect component registration, e.g. ProjectComponent is registered as Application Component
             or the class doesn't implement any component interface at all (plugin.xml / Java Code)
         </li>
