Spellchecker inspection description

--- a/plugins/spellchecker/src/inspectionDescriptions/SpellCheckingInspection.html
+++ b/plugins/spellchecker/src/inspectionDescriptions/SpellCheckingInspection.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <font face="verdana" size="-1">
-  Typo
+  Spellchecker inspection helps to locate typos in your code, comments and literals and fix them in one click.
 </font>
 </body>
 </html>
