--- a/plugins/IntelliLang/src/inspectionDescriptions/PatternNotApplicable.html
+++ b/plugins/IntelliLang/src/inspectionDescriptions/PatternNotApplicable.html
@@ -1,26 +1,23 @@
 <html>
-<head>
-  <style type="text/css">
-    body, table {
-      font-family: Verdana, sans-serif;
-      font-size: 100%;
-      padding-left: 2mm;
-    }
-
-    #footer {
-      font-size: 95%;
-      padding-top: 10px;
-    }
-  </style>
-</head>
-
 <body>
-<p>
-  Checks whether a pattern-validation annotation (<code>@Pattern</code> or derived ones)
-  is valid to be applied to the annotated element. Only elements of type <code>String</code>
-  may be annotated.
-</p>
+<table>
+  <tr>
+    <td valign="top" height="150">
+      <font face="verdana" size="-1">
+        <p>
+          Checks whether a pattern-validation annotation (<code>@Pattern</code> or derived ones)
+          is valid to be applied to the annotated element. Only elements of type <code>String</code>
+          may be annotated.
+        </p>
 
-<p id="footer">Powered by IntelliLang</p>
+      </font>
+    </td>
+  </tr>
+  <tr>
+    <td height="20">
+      <font face="verdana" size="-2"><p id="footer">Powered by IntelliLang</p></font>
+    </td>
+  </tr>
+</table>
 </body>
 </html>
