--- a/plugins/IntelliLang/src/inspectionDescriptions/PatternOverriddenByNonAnnotatedMethod.html
+++ b/plugins/IntelliLang/src/inspectionDescriptions/PatternOverriddenByNonAnnotatedMethod.html
@@ -1,31 +1,27 @@
 <html>
-<head>
-  <style type="text/css">
-    body, table {
-      font-family: Verdana, sans-serif;
-      font-size: 100%;
-      padding-left: 2mm;
-    }
-
-    #footer {
-      font-size: 95%;
-      padding-top: 10px;
-    }
-  </style>
-</head>
-
 <body>
-<p>
-  This inspecton Checks whether a method without any <code>@Pattern</code> or derived annotation overrides an annotated
-  method from its base classes. This is not necessary for the error-highlighting inside the editor, however the
-  runtime-check instrumentation doesn't pick up annotations from base-class methods.
-</p>
+<table>
+  <tr>
+    <td valign="top" height="150">
+      <font face="verdana" size="-1">
+        <p>
+          This inspecton Checks whether a method without any <code>@Pattern</code> or derived annotation overrides an annotated
+          method from its base classes. This is not necessary for the error-highlighting inside the editor, however the
+          runtime-check instrumentation doesn't pick up annotations from base-class methods.
+        </p>
 
-<p>
-  A QuickFix is provided to add an annotation that matches the one from the base-class method. This ensures the
-  runtime-check instrumentation works correctly.
-</p>
-
-<p id="footer">Powered by IntelliLang</p>
+        <p>
+          A QuickFix is provided to add an annotation that matches the one from the base-class method. This ensures the
+          runtime-check instrumentation works correctly.
+        </p>
+      </font>
+    </td>
+  </tr>
+  <tr>
+    <td height="20">
+      <font face="verdana" size="-2"><p id="footer">Powered by IntelliLang</p></font>
+    </td>
+  </tr>
+</table>
 </body>
 </html>
