--- a/plugins/IntelliLang/src/inspectionDescriptions/PatternValidation.html
+++ b/plugins/IntelliLang/src/inspectionDescriptions/PatternValidation.html
@@ -1,25 +1,22 @@
 <html>
-<head>
-  <style type="text/css">
-    body, table {
-      font-family: Verdana, sans-serif;
-      font-size: 100%;
-      padding-left: 2mm;
-    }
-
-    #footer {
-      font-size: 95%;
-      padding-top: 10px;
-    }
-  </style>
-</head>
-
 <body>
-<p>
-  Provides on-the-fly validation for expressions passed as argments for <code>@Pattern</code> parameters and
-  values returned from <code>@Pattern</code>-annotated methods.
-</p>
-
-<p id="footer">Powered by IntelliLang</p>
+<table>
+  <tr>
+    <td valign="top" height="150">
+      <font face="verdana" size="-1">
+        <p>
+          Provides on-the-fly validation for expressions passed as argments for <code>@Pattern</code> parameters and
+          values returned from <code>@Pattern</code>-annotated methods.
+        </p>
+      </font>
+    </td>
+  </tr>
+  <tr>
+    <td height="20">
+      <font face="verdana" size="-2">
+        <p id="footer">Powered by IntelliLang</p></font>
+    </td>
+  </tr>
+</table>
 </body>
 </html>
