--- a/plugins/IntelliLang/src/inspectionDescriptions/UnknownLanguage.html
+++ b/plugins/IntelliLang/src/inspectionDescriptions/UnknownLanguage.html
@@ -1,25 +1,21 @@
 <html>
-<head>
-  <style type="text/css">
-    body, table {
-      font-family: Verdana, sans-serif;
-      font-size: 100%;
-      padding-left: 2mm;
-    }
-
-    #footer {
-      font-size: 95%;
-      padding-top: 10px;
-    }
-  </style>
-</head>
-
 <body>
-<p>
-  Checks whether the ID of the language used in an <code>@Language</code> annotation refers to an 
-  existing language implementation.
-</p>
-
-<p id="footer">Powered by IntelliLang</p>
+<table>
+  <tr>
+    <td valign="top" height="150">
+      <font face="verdana" size="-1">
+        <p>
+          Checks whether the ID of the language used in an <code>@Language</code> annotation refers to an
+          existing language implementation.
+        </p>
+      </font>
+    </td>
+  </tr>
+  <tr>
+    <td height="20">
+      <font face="verdana" size="-2"><p id="footer">Powered by IntelliLang</p></font>
+    </td>
+  </tr>
+</table>
 </body>
 </html>
