--- a/plugins/spellchecker/testData/inspection/commentsWithMistakes/test.html
+++ b/plugins/spellchecker/testData/inspection/commentsWithMistakes/test.html
@@ -1,5 +1,5 @@
 <html>
 <body>
- <h1><!--Some content goes <TYPO descr="Word 'hrere' is misspelled">hrere</TYPO>--></h1>
+ <h1><!--Some content goes <TYPO descr="Typo: In word 'hrere'">hrere</TYPO>--></h1>
 </body>
 </html>
