rename "Constant 'StringBuffer' may be 'String'" inspection to "'StringBuffer' can be replaced with 'String'", move it to the Code Style Issues category and enable it by default

--- a/plugins/InspectionGadgets/src/inspectionDescriptions/StringBufferReplaceableByString.html
+++ b/plugins/InspectionGadgets/src/inspectionDescriptions/StringBufferReplaceableByString.html
@@ -1,8 +1,8 @@
 <html>
 <body>
-This inspection reports any variables declared as <b>java.lang.StringBuffer</b>
-and <b>java.lang.StringBuilder</b> which are
-effectively constant, and may thus be declared more efficiently declared as <b>java.lang.String</b>.
+This inspection reports any variables declared as or uses of <b>java.lang.StringBuffer</b> and <b>java.lang.StringBuilder</b>
+which are effectively constant. These may be replaced with <b>java.lang.String</b> expressions which results in simpler and possibly
+more efficient code.
 <p>
 <small>Powered by InspectionGadgets</small>
 </body>
