Add Intention to prefill named optional parameters in calls
^KTIJ-16676 Fixed

--- a/plugins/kotlin/code-insight/descriptions/resources-en/intentionDescriptions/PrefillNamedMandatoryParametersIntention/description.html
+++ b/plugins/kotlin/code-insight/descriptions/resources-en/intentionDescriptions/PrefillNamedMandatoryParametersIntention/description.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-Prefills named parameters for constructor or function with TODO()'s as arguments.
+Prefills named mandatory parameters for constructor or function with TODO()'s as arguments.
 </body>
 </html>
